--- a/app/globals.css
+++ b/app/globals.css
@@ -45,4 +45,7 @@
   .btn {
     @apply hover:no-underline bg-blue-accent hover:bg-blue-accent-hover tracking-wider w-full text-nav font-bold cursor-pointer uppercase px-4 py-2 rounded-md transition-colors block;
   }
+  .edit-btn {
+    @apply bg-blue-accent text-white font-bold cursor-pointer uppercase px-4 py-2 rounded-md transition-colors block;
+  }
 }
